# embeddings

./: LICENSE.txt  README.md  index.html  package-lock.json  package.json  vite.config.ts
backend/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
src/: AdvancedSettings.vue  App.vue  Embeddings.ts  Main.ts  ModelSelector.vue  Models.ts  Plot.ts  embeddings.ts  main.ts  plot.ts
src/model/: TSNE.example.ts  TSNE.test.ts  TSNE.ts
